# stellarium

./: .appveyor.yml  CMakeLists.txt  assets.pri  stellarium.pro
.github/: windows.yml
.github/workflows/: View.yml  android.yml  android_cmake.yml  android_fake.yml  android_fast.yml  ci.yml  ios.yml  windows_build.yml
android/: AndroidManifest.xml
android_local/: Application.pro  Libraries.pro  Plugins.pro  _config.pri  stellarium-except-plugins.pro  stellarium.pro
android_local/projects/: LTSMain.pro  Main.pro  TelescopeControl.pro  _common.pri  _plugin.pri
android_project/stellarium/: stellariumLTS.pro
cmake/: default_cfg.ini.cmake  stellarium.iss.cmake  stellarium.rc.cmake
data/: CMakeLists.txt  ssystem_major.ini
data/gui/: guiRes.qrc  normalStyle.css
debian/: control  stellarium.install
landscapes/geneva/: landscape.ini
landscapes/zero/: landscape.ini
mac_local/: ._Libraries.pro  Application.pro  Libraries.pro  _config.pri
mac_local/ios/: ._Info.plist  ._Launch.xib
mac_local/projects/: Main.pro  _common.pri
models/: CMakeLists.txt
plugins/AngleMeasure/src/: CMakeLists.txt
plugins/ArchaeoLines/src/: CMakeLists.txt
plugins/CompassMarks/src/: CMakeLists.txt
plugins/EquationOfTime/src/: CMakeLists.txt
plugins/NavStars/src/test/: CMakeLists.txt
plugins/Satellites/src/test/: CMakeLists.txt
plugins/Supernovae/src/test/: CMakeLists.txt
plugins/TelescopeControl/src/Rts2/: CMakeLists.txt
plugins/Vts/src/: CMakeLists.txt
po/: CMakeLists.txt
po/stellarium/: POTFILES.in
scenery3d/Sterngarten/: CMakeLists.txt
scenery3d/Testscene/: CMakeLists.txt
src/: CMakeLists.txt  StelAndroid.cpp  StelAndroid.hpp  StelLogger.cpp  StelMainView.cpp  StelMainView.hpp  main.cpp
src/core/: Dithering.hpp  OctahedronPolygon.cpp  StelApp.cpp  StelApp.hpp  StelCore.cpp  StelFileMgr.cpp  StelHips.cpp  StelLocationMgr.cpp  StelModuleMgr.cpp  StelMovementMgr.cpp  StelMovementMgr.hpp  StelOBJ.cpp  StelObject.cpp  StelObject.hpp  StelOpenGL.hpp  StelTexture.cpp  StelToast.cpp  StelUtils.cpp  StelUtils.hpp  StelVideoMgr.hpp
src/gui/: AstroCalcDialog.cpp  AstroCalcDialog.hpp  ConfigurationDialog.cpp  ConfigurationDialog.hpp  Dialog.cpp  Dialog.hpp  HelpDialog.cpp  HelpDialog.hpp  LocationDialog.cpp  SearchDialog.cpp  ShortcutsDialog.cpp  SkyGui.cpp  StelDialog.cpp  StelDialog.hpp  StelGui.cpp  StelGui.hpp  StelGuiItems.cpp  ViewDialog.cpp  ViewDialog.hpp  astroCalcDialog.ui  configurationDialog.ui  dateTimeDialogGui.ui  helpDialogGui.ui  locationDialogGui.ui  scriptConsole.ui  searchDialogGui.ui  viewDialog.ui
src/scripting/: StelScriptMgr.cpp
windows_project/StelPanel/: StelPanel.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
(+46 files in other folders)
